versioned_docs/version-3.0/sql-manual/sql-functions/string-functions/strright.md
---
{
    "title": "STRRIGHT",
    "language": "en"
}
---

<!-- 
Licensed to the Apache Software Foundation (ASF) under one
or more contributor license agreements.  See the NOTICE file
distributed with this work for additional information
regarding copyright ownership.  The ASF licenses this file
to you under the Apache License, Version 2.0 (the
"License"); you may not use this file except in compliance
with the License.  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
-->


## Strright
### Description
#### Syntax

`VARCHAR strright (VARCHAR str, INT len)`


It returns the right part of a string of specified length, length is char length not the byte size. Another alias for this function is `right`.
If the parameters contain a NULL value, the function will always return NULL. If the integer parameter is negative, the function will retrieve the portion of the string starting from the left and moving to the right, beginning at the absolute value of len.

### Example

```
mysql> select strright("Hello doris",5);
+-------------------------+
| strright('Hello doris', 5) |
+-------------------------+
| doris                   |
+-------------------------+
mysql> select strright("Hello doris",-7);
+--------------------------+
| strright('Hello doris', -7) |
+--------------------------+
| doris                    |
+--------------------------+
mysql> select strright("Hello doris",NULL);
+----------------------------+
| strright('Hello doris', NULL) |
+----------------------------+
| NULL                       |
+----------------------------+
mysql> select strright(NULL,5);
+----------------+
| strright(NULL, 5) |
+----------------+
| NULL           |
+----------------+
```
### Keywords
    STRRIGHT, RIGHT